objects/Acm_Facility__c.object
<CustomObject>
    <description>Acm Facility that come from ACM facilities API</description>
    <fields>
        <fullName>AcmLastModifiedDate__c</fullName>
        <label>AcmLastModifiedDate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Application_key__c</fullName>
        <label>Bank Application key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Risk_Taker__c</fullName>
        <label>Bank Risk Taker</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPTYID__c</fullName>
        <label>CPTYID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry_Date</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Active__c</fullName>
        <description>Is facility from ACM active or inactive</description>
        <label>Facility_Active</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Amount__c</fullName>
        <label>Facility_Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility_Currency__c</fullName>
        <label>Facility_Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Id__c</fullName>
        <description>Facility Id from ACM</description>
        <externalId>true</externalId>
        <label>Facility Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Product_Description__c</fullName>
        <description>Facility Product Description</description>
        <label>Facility_Product_Description</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Product__c</fullName>
        <description>Facility Product from ACM</description>
        <label>Facility Product</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Given_Default__c</fullName>
        <label>Loss_Given_Default</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Facility_Id__c</fullName>
        <label>Parent_Facility_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Acm_Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start_Date</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenorUnit__c</fullName>
        <label>TenorUnit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenorValue__c</fullName>
        <label>TenorValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Acm Facility</label>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acm Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>